# procDARN

./: Cargo.toml  build.rs  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
benches/: backscatter_benchmark.rs  fitacf3.rs
src/: dmap.rs  error.rs  formats.rs  lib.rs  main.rs
src/fitting/: fitacf_v3.rs  fitstruct.rs  mod.rs
src/fitting/common/: error.rs  fitstruct.rs  mod.rs  preprocessing.rs
src/fitting/fitacf3/: determinations.rs  filtering.rs  fitacf_v3.rs  fitstruct.rs  fitting.rs  least_squares.rs  mod.rs
src/fitting/lmfit2/: determinations.rs  estimations.rs  fitstruct.rs  fitting.rs  lmfit2.rs  mod.rs  preprocessing.rs
src/gridding/: filter.rs  grid.rs  grid_table.rs  mod.rs
src/hdw/: hdw.rs  mod.rs
src/utils/: channel.rs  constants.rs  dmap.rs  hdw.rs  igrf.rs  mod.rs  rawacf.rs  rpos.rs  scan.rs  search.rs
tests/: tests.rs
tests/test_files/: large.rawacf  test.fitacf  test.rawacf
