[package]
name = "backscatter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.13.1"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
is_close = "0.1.3"
itertools = "0.10.5"
dmap = { git = "https://github.com/SuperDARNCanada/dmap.git", branch = "error_refactor" }
rust-embed = "6.6.1"
rayon = "1.7.0"
geodesy = "0.11.0"
igrf = "0.2.0"
time = "0.3.30"

[build-dependencies]
git2 =  "0.17.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "backscatter_benchmark"
harness = false

[lib]
name = "backscatter_rs"
path = "src/lib.rs"