[package]
name = "backscatter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.13.1"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
indexmap = "2.3.0"
is_close = "0.1.3"
itertools = "0.10.5"
numpy = "0.21.0"
pyo3 = { version = "0.21.0", features = ["extension-module", "indexmap", "abi3-py38"] }
dmap = { git = "https://github.com/SuperDARNCanada/dmap.git", branch = "develop" }
rust-embed = "6.6.1"
rayon = "1.7.0"

[build-dependencies]
git2 =  "0.17.1"

[dev-dependencies]
assert_unordered = "0.3.5"
criterion = { version = "0.4", features = ["html_reports"] }
ndarray = { version = "0.15.6", features = ["approx"] }

[[bench]]
name = "fitacf3"
harness = false

[lib]
name = "backscatter_rs"
path = "src/lib.rs"