[build-system]
requires = ["maturin>=1,<2", "numpy<2"]
build-backend = "maturin"

[project]
name = "procdarn"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
    { name = "Remington Rohel" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
dependencies = ["numpy<2"]

[tool.maturin]
bindings = "pyo3"
profile = "release"
compatibility = "manylinux2014"
auditwheel = "repair"
strip = true

[project.scripts]
fit_fitacf3 = "procdarn:fit_fitacf3"
fit_lmfit2 = "procdarn:fit_lmfit2"
